# CarHMI

./: AmapBottomComponent.qml  AppBtn.qml  AppCard.qml  AppCardContainer.qml  AppPage.qml  CMakeLists.txt  CMakeUserPresets.json  CarConditionCard.qml  CarSettingPage.qml  ControlsBelow.qml  GlassRect.qml  Home.qml  IconButton.qml  IconImage.qml  LeftButton.qml  LeftDrawerMessage.qml  LineParticles.qml  Main.qml  MainPage.qml  MainPageLeftPart.qml  MainPageRightPart.qml  MySwitch.qml  MyTitle.qml  Page1.qml  PageAirConditioner.qml  PageAirTopComponent.qml  PageMusic.qml  PageNav.qml  ProcessLauncher.h  ProfilePicture.qml  QQMusicBottomComponent.qml  QQMusicCenterComponent.qml  RightDrawerButton.qml  RoundedIcon.qml  RoundedSlider.qml  SliderBtn.qml  TemperatureControl.qml  TopDrawerLeftCont.qml  TopDrawerRightCont.qml  Ximalaya.qml  (+1 more)
music/: DontStop.lrc  Time.lrc  TooBad.lrc
